fix overlapped issue of Iteration and workItem detail.
- Reduce the z-index of detail panel.

--- a/src/app/work-item/work-item-detail/work-item-detail.component.scss
+++ b/src/app/work-item/work-item-detail/work-item-detail.component.scss
@@ -253,7 +253,7 @@
   bottom: 0;
   width: 50%;
   min-width: em(250);
-  z-index: 9999;
+  z-index: 100;
   padding: em(20) 0;
   border-left: 1px solid darken($color-pf-white, 20%);
   overflow-y: scroll;
